// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Add" commands add-a11y 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint:aria\\": \\"pa11y ./dist/index.html\\"
    }
}
"
`;

exports[`"Add" commands add-babel (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: babel.config.js,
            size: 387,
            type: file
        }
    ],
    size: 387,
    type: directory
}
"
`;

exports[`"Add" commands add-babel (with React) 2`] = `
"module.exports = {
    plugins: [
        'react-hot-loader/babel',
        '@babel/plugin-transform-runtime',
        '@babel/plugin-proposal-class-properties',
        '@babel/plugin-proposal-export-default-from',
        '@babel/plugin-proposal-optional-chaining'
    ],
    presets: [
        '@babel/preset-env',
        'babel-preset-minify',
        '@babel/preset-react'
    ]
};"
`;

exports[`"Add" commands add-babel 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: babel.config.js,
            size: 322,
            type: file
        }
    ],
    size: 322,
    type: directory
}
"
`;

exports[`"Add" commands add-babel 2`] = `
"module.exports = {
    plugins: [
        '@babel/plugin-transform-runtime',
        '@babel/plugin-proposal-class-properties',
        '@babel/plugin-proposal-export-default-from',
        '@babel/plugin-proposal-optional-chaining'
    ],
    presets: [
        '@babel/preset-env',
        'babel-preset-minify'
    ]
};"
`;

exports[`"Add" commands add-browsersync 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-browsersync 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-browsersync 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"webpack\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"prestart\\": \\"npm run build:es\\",
        \\"start\\": \\"npm-run-all --parallel watch:es watch:css serve\\",
        \\"serve\\": \\"browser-sync start --server ./dist --files ./dist\\"
    }
}
"
`;

exports[`"Add" commands add-electron --use-parcel 1`] = `
"{
    \\"name\\": \\"tomo-native-app\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"Native Desktop application built with Electron\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"main\\": \\"index.js\\",
    \\"scripts\\": {
        \\"build:electron\\": \\"npm-run-all build:es build:css\\",
        \\"prestart:electron\\": \\"npm run build:electron\\",
        \\"start:electron\\": \\"electron index --enable-logging\\",
        \\"dev\\": \\"npm-run-all --parallel watch:es start:electron\\"
    }
}
"
`;

exports[`"Add" commands add-electron 1`] = `
"{
    \\"name\\": \\"tomo-native-app\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"Native Desktop application built with Electron\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"main\\": \\"index.js\\",
    \\"scripts\\": {
        \\"build:electron\\": \\"npm-run-all build:es build:css\\",
        \\"prestart:electron\\": \\"npm run build:electron\\",
        \\"start:electron\\": \\"electron index --enable-logging\\",
        \\"dev\\": \\"npm-run-all --parallel watch:es watch:css start:electron\\"
    }
}
"
`;

exports[`"Add" commands add-electron 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: bin,
            children: [
                {
                    name: preload.js,
                    size: 314,
                    type: file
                }
            ],
            size: 314,
            type: directory
        },
        {
            name: index.js,
            size: 2194,
            type: file
        },
        {
            name: package.json,
            size: 467,
            type: file
        }
    ],
    size: 2975,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: esdoc.conf.json,
            size: 417,
            type: file
        }
    ],
    size: 417,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc (with React) 2`] = `
"{
    \\"source\\": \\"./src\\",
    \\"destination\\": \\"./docs\\",
    \\"plugins\\": [
        {
            \\"name\\": \\"esdoc-standard-plugin\\"
        },
        {
            \\"name\\": \\"esdoc-ecmascript-proposal-plugin\\",
            \\"option\\": {
                \\"all\\": true
            }
        },
        {
            \\"name\\": \\"esdoc-jsx-plugin\\",
            \\"options\\": {
                \\"enable\\": true
            }
        }
    ]
}
"
`;

exports[`"Add" commands add-esdoc 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-esdoc 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: esdoc.conf.json,
            size: 286,
            type: file
        },
        {
            name: package.json,
            size: 419,
            type: file
        }
    ],
    size: 705,
    type: directory
}
"
`;

exports[`"Add" commands add-esdoc 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint:docs\\": \\"eslint . --no-eslintrc --rule valid-jsdoc:error --parser babel-eslint\\",
        \\"predocs\\": \\"npm run lint:docs\\",
        \\"docs\\": \\"esdoc -c esdoc.conf.json\\",
        \\"postdocs\\": \\"open-cli ./docs/index.html\\"
    }
}
"
`;

exports[`"Add" commands add-esdoc 4`] = `
"{
    \\"source\\": \\"./src\\",
    \\"destination\\": \\"./docs\\",
    \\"plugins\\": [
        {
            \\"name\\": \\"esdoc-standard-plugin\\"
        },
        {
            \\"name\\": \\"esdoc-ecmascript-proposal-plugin\\",
            \\"option\\": {
                \\"all\\": true
            }
        }
    ]
}
"
`;

exports[`"Add" commands add-eslint (with React) 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 432,
            type: file
        }
    ],
    size: 468,
    type: directory
}
"
`;

exports[`"Add" commands add-eslint (with React) 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    plugins: [
        'jsx-a11y'
    ],
    settings: {
        react: {
            version: '16.2'
        }
    }
};"
`;

exports[`"Add" commands add-eslint 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 154,
            type: file
        }
    ],
    size: 190,
    type: directory
}
"
`;

exports[`"Add" commands add-eslint 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint'
};"
`;

exports[`"Add" commands add-jest --browser 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-jest --browser 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 168,
            type: file
        }
    ],
    size: 168,
    type: directory
}
"
`;

exports[`"Add" commands add-jest --browser 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"setupFilesAfterEnv\\": [
            \\"<rootDir>/__tests__/setup.js\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"scripts\\": {
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\"
    }
}
"
`;

exports[`"Add" commands add-jest --browser 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                },
                {
                    name: setup.js,
                    size: 370,
                    type: file
                }
            ],
            size: 707,
            type: directory
        },
        {
            name: package.json,
            size: 602,
            type: file
        }
    ],
    size: 1309,
    type: directory
}
"
`;

exports[`"Add" commands add-jest 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-jest 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 168,
            type: file
        }
    ],
    size: 168,
    type: directory
}
"
`;

exports[`"Add" commands add-jest 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"scripts\\": {
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\"
    }
}
"
`;

exports[`"Add" commands add-jest 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                }
            ],
            size: 337,
            type: directory
        },
        {
            name: package.json,
            size: 516,
            type: file
        }
    ],
    size: 853,
    type: directory
}
"
`;

exports[`"Add" commands add-makefile 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: Makefile,
            size: 26,
            type: file
        }
    ],
    size: 26,
    type: directory
}
"
`;

exports[`"Add" commands add-makefile 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 455,
            type: file
        },
        {
            name: Makefile,
            size: 1507,
            type: file
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                },
                {
                    name: setup.js,
                    size: 370,
                    type: file
                }
            ],
            size: 707,
            type: directory
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 1528,
                            type: file
                        }
                    ],
                    size: 1528,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot,
                            size: 53094,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.svg,
                            size: 167134,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.ttf,
                            size: 52788,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff,
                            size: 25732,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff2,
                            size: 18112,
                            type: file
                        }
                    ],
                    size: 316860,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: blank_canvas.png,
                            size: 88698,
                            type: file
                        },
                        {
                            name: preferences.png,
                            size: 81379,
                            type: file
                        }
                    ],
                    size: 170077,
                    type: directory
                },
                {
                    name: index.html,
                    size: 1268,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 489733,
            type: directory
        },
        {
            name: babel.config.js,
            size: 387,
            type: file
        },
        {
            name: package.json,
            size: 1738,
            type: file
        },
        {
            name: postcss.config.js,
            size: 438,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 1829,
                            type: file
                        }
                    ],
                    size: 1829,
                    type: directory
                },
                {
                    name: main.js,
                    size: 199,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3980,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2039,
                            type: file
                        }
                    ],
                    size: 6019,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 510,
                            type: file
                        }
                    ],
                    size: 510,
                    type: directory
                }
            ],
            size: 8557,
            type: directory
        },
        {
            name: webpack.config.js,
            size: 1045,
            type: file
        }
    ],
    size: 504603,
    type: directory
}
"
`;

exports[`"Add" commands add-makefile 3`] = `"# Makefile built with tomo"`;

exports[`"Add" commands add-makefile 4`] = `
"# Makefile built from /path/to/package.json

build-es: ## Task description
	del-cli dist/assets
	webpack
	$(MAKE) copy

watch-es: ## Task description
	watch 'make build-es' ./src

lint: ## Task description
	eslint . -c ./.eslintrc.js --fix

lint-ing: ## Task description
	watch 'make lint' ./src

lint-tests: ## Task description
	eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore

build-css: ## Task description
	postcss ./assets/css/style.css --dir ./dist

watch-css: ## Task description
	postcss ./assets/css/style.css --dir ./dist --watch

test: ## Task description
	jest .*.test.js --coverage

test-ing: ## Task description
	jest .*.test.js --coverage --watchAll

copy: ## Task description
	npm-run-all --parallel copy:assets copy:index

copy-assets: ## Task description
	cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive

copy-index: ## Task description
	cpy './assets/index.html' ./dist

watch-assets: ## Task description
	watch 'make copy' ./assets

dashboard: ## Task description
	webpack-dashboard -- webpack-dev-server --config ./webpack.config.js

dev: ## Task description
	stmux [ 'make dashboard' : 'make lint-ing' ]

start: ## Task description
	$(MAKE) build-es
	npm-run-all --parallel watch:es watch:css serve

serve: ## Task description
	browser-sync start --server ./dist --files ./dist

help: ## Show this help
	@fgrep -h \\"##\\" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\\\$$//' | sed -e 's/##/\\\\n    /'"
`;

exports[`"Add" commands add-marionette 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 1528,
                            type: file
                        }
                    ],
                    size: 1528,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot,
                            size: 53094,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.svg,
                            size: 167134,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.ttf,
                            size: 52788,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff,
                            size: 25732,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff2,
                            size: 18112,
                            type: file
                        }
                    ],
                    size: 316860,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: blank_canvas.png,
                            size: 88698,
                            type: file
                        },
                        {
                            name: preferences.png,
                            size: 81379,
                            type: file
                        }
                    ],
                    size: 170077,
                    type: directory
                },
                {
                    name: index.html,
                    size: 1268,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 489733,
            type: directory
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 1829,
                            type: file
                        }
                    ],
                    size: 1829,
                    type: directory
                },
                {
                    name: main.js,
                    size: 199,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3980,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2039,
                            type: file
                        }
                    ],
                    size: 6019,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 510,
                            type: file
                        }
                    ],
                    size: 510,
                    type: directory
                }
            ],
            size: 8557,
            type: directory
        }
    ],
    size: 498290,
    type: directory
}
"
`;

exports[`"Add" commands add-parcel 1`] = `
"module.exports = {
    content: [
        './assets/index.html'
    ]
};"
`;

exports[`"Add" commands add-parcel 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"clean\\": \\"del-cli ./dist\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"npm run clean\\",
        \\"build:es\\": \\"parcel build --out-dir ./dist --public-url ./ ./assets/index.html\\",
        \\"prewatch:es\\": \\"npm run clean\\",
        \\"watch:es\\": \\"parcel watch --out-dir ./dist --public-url ./ ./assets/index.html\\",
        \\"serve\\": \\"parcel ./assets/index.html --out-dir ./dist --open\\",
        \\"start\\": \\"npm-run-all --parallel watch:assets serve\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run watch:es\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\"
    }
}
"
`;

exports[`"Add" commands add-postcss 1`] = `
"module.exports = {
    map: true,
    parser: require('postcss-safe-parser'),
    plugins: [
        require('stylelint')({config: {extends: 'stylelint-config-recommended'}}),
        require('postcss-import')(),
        require('postcss-preset-env')({stage: 0}),
        require('postcss-normalize')({browsers: 'last 2 versions'}),
        require('cssnano')(),
        require('postcss-reporter')({clearReportedMessages: true})
    ]
};"
`;

exports[`"Add" commands add-postcss 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\"
    }
}
"
`;

exports[`"Add" commands add-rollup (with React) 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"rollup -c\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' ./src\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run watch:es\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\"
    }
}
"
`;

exports[`"Add" commands add-rollup (with React) 2`] = `
"/* eslint-disable max-len */
import babel from 'rollup-plugin-babel';
import commonjs from 'rollup-plugin-commonjs';
import resolve from 'rollup-plugin-node-resolve';
import replace from 'rollup-plugin-replace';
import {terser} from 'rollup-plugin-terser';

export default {
    input: './src/main.js',
    output: {
        file: './dist/bundle.min.js',
        format: 'iife',
        sourceMap: 'inline'
    },
    plugins: [
        babel({exclude: 'node_modules/**', runtimeHelpers: true}),
        commonjs(),
        resolve({browser: true}),
        replace({'process.env.NODE_ENV': JSON.stringify('production')}),
        terser()
    ]
};"
`;

exports[`"Add" commands add-rollup 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"rollup -c\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' ./src\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run watch:es\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\"
    }
}
"
`;

exports[`"Add" commands add-rollup 2`] = `
"/* eslint-disable max-len */
import babel from 'rollup-plugin-babel';
import commonjs from 'rollup-plugin-commonjs';
import resolve from 'rollup-plugin-node-resolve';
import replace from 'rollup-plugin-replace';
import {terser} from 'rollup-plugin-terser';

export default {
    input: './src/main.js',
    output: {
        file: './dist/bundle.min.js',
        format: 'iife',
        sourceMap: 'inline'
    },
    plugins: [
        babel({exclude: 'node_modules/**', runtimeHelpers: true}),
        commonjs({namedExports: {'./node_modules/backbone/backbone.js': ['Model', 'history'],'./node_modules/backbone.marionette/lib/backbone.marionette.js': ['Application', 'View', 'MnObject']}}),
        resolve({browser: true}),
        replace({'process.env.NODE_ENV': JSON.stringify('production')}),
        terser()
    ]
};"
`;

exports[`"Add" commands add-webpack (with React) 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-webpack (with React) 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    plugins: [
        'jsx-a11y'
    ],
    settings: {
        react: {
            version: 'undefined'
        }
    }
};"
`;

exports[`"Add" commands add-webpack (with React) 3`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 460,
            type: file
        },
        {
            name: babel.config.js,
            size: 387,
            type: file
        },
        {
            name: package.json,
            size: 995,
            type: file
        },
        {
            name: webpack.config.js,
            size: 1155,
            type: file
        }
    ],
    size: 3033,
    type: directory
}
"
`;

exports[`"Add" commands add-webpack (with React) 4`] = `
"/* eslint-env node */
const {resolve} = require('path');
const DashboardPlugin = require('webpack-dashboard/plugin');
const TerserPlugin = require('terser-webpack-plugin');

module.exports = {
    mode: 'development',
    entry: [
        'react-hot-loader/patch',
        'src/main.js'
    ],
    output: {
        path: resolve('./dist'),
        filename: 'bundle.min.js'
    },
    module: {
        rules: [
            {
                test: /.jsx?$/,
                exclude: /node_modules/,
                loader: 'babel-loader',
                query: {
                    presets: [
                        '@babel/env'
                    ]
                }
            }
        ]
    },
    plugins: [
        new DashboardPlugin()
    ],
    devServer: {
        contentBase: './dist',
        compress: true,
        watchContentBase: true
    },
    optimization: {
        minimize: true,
        minimizer: [new TerserPlugin()]
    },
    resolve: {
        modules: [resolve(__dirname, 'src'), 'node_modules'],
        extensions: ['.js', '.jsx'],
        alias: {
            'react-dom': '@hot-loader/react-dom'
        }
    }
};"
`;

exports[`"Add" commands add-webpack (with React) 5`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:es\\": \\"webpack\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run dashboard\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\"
    }
}
"
`;

exports[`"Add" commands add-webpack 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Add" commands add-webpack 2`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    plugins: [
        'jsx-a11y'
    ],
    settings: {
        react: {
            version: 'undefined'
        }
    }
};"
`;

exports[`"Add" commands add-webpack 3`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 460,
            type: file
        },
        {
            name: babel.config.js,
            size: 387,
            type: file
        },
        {
            name: package.json,
            size: 995,
            type: file
        },
        {
            name: webpack.config.js,
            size: 1041,
            type: file
        }
    ],
    size: 2919,
    type: directory
}
"
`;

exports[`"Add" commands add-webpack 4`] = `
"/* eslint-env node */
const {resolve} = require('path');
const DashboardPlugin = require('webpack-dashboard/plugin');
const TerserPlugin = require('terser-webpack-plugin');

module.exports = {
    mode: 'development',
    entry: {
        app: 'src/main.js'
    },
    output: {
        path: resolve('./dist'),
        filename: 'bundle.min.js'
    },
    module: {
        rules: [
            {
                test: /.jsx?$/,
                exclude: /node_modules/,
                loader: 'babel-loader',
                query: {
                    presets: [
                        '@babel/env'
                    ]
                }
            }
        ]
    },
    plugins: [
        new DashboardPlugin()
    ],
    devServer: {
        contentBase: './dist',
        compress: true,
        watchContentBase: true
    },
    optimization: {
        minimize: true,
        minimizer: [new TerserPlugin()]
    },
    resolve: {
        modules: [resolve(__dirname, 'src'), 'node_modules'],
        extensions: ['.js']
    }
};"
`;

exports[`"Add" commands add-webpack 5`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:es\\": \\"webpack\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run dashboard\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\"
    }
}
"
`;

exports[`"Remove" commands remove a11y 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint:aria\\": \\"pa11y ./dist/index.html\\"
    }
}
"
`;

exports[`"Remove" commands remove a11y 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {}
}
"
`;

exports[`"Remove" commands remove browsersync 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"webpack\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"prestart\\": \\"npm run build:es\\",
        \\"start\\": \\"npm-run-all --parallel watch:es watch:css serve\\",
        \\"serve\\": \\"browser-sync start --server ./dist --files ./dist\\"
    }
}
"
`;

exports[`"Remove" commands remove browsersync 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"webpack\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\"
    }
}
"
`;

exports[`"Remove" commands remove parcel 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"clean\\": \\"del-cli ./dist\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"npm run clean\\",
        \\"build:es\\": \\"parcel build --out-dir ./dist --public-url ./ ./assets/index.html\\",
        \\"prewatch:es\\": \\"npm run clean\\",
        \\"watch:es\\": \\"parcel watch --out-dir ./dist --public-url ./ ./assets/index.html\\",
        \\"serve\\": \\"parcel ./assets/index.html --out-dir ./dist --open\\",
        \\"start\\": \\"npm-run-all --parallel watch:assets serve\\"
    }
}
"
`;

exports[`"Remove" commands remove parcel 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 900,
            type: file
        },
        {
            name: purgecss.config.js,
            size: 72,
            type: file
        }
    ],
    size: 972,
    type: directory
}
"
`;

exports[`"Remove" commands remove parcel 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {}
}
"
`;

exports[`"Remove" commands remove parcel 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 187,
            type: file
        }
    ],
    size: 187,
    type: directory
}
"
`;

exports[`"Remove" commands remove postcss 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\"
    }
}
"
`;

exports[`"Remove" commands remove postcss 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 312,
            type: file
        },
        {
            name: postcss.config.js,
            size: 438,
            type: file
        }
    ],
    size: 750,
    type: directory
}
"
`;

exports[`"Remove" commands remove postcss 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {}
}
"
`;

exports[`"Remove" commands remove postcss 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 187,
            type: file
        }
    ],
    size: 187,
    type: directory
}
"
`;

exports[`"Remove" commands remove rollup 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"rollup -c\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\"
    }
}
"
`;

exports[`"Remove" commands remove rollup 2`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 645,
            type: file
        },
        {
            name: rollup.config.js,
            size: 646,
            type: file
        }
    ],
    size: 1291,
    type: directory
}
"
`;

exports[`"Remove" commands remove rollup 3`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {}
}
"
`;

exports[`"Remove" commands remove rollup 4`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 187,
            type: file
        }
    ],
    size: 187,
    type: directory
}
"
`;

exports[`"Remove" commands remove webpack 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 736,
            type: file
        },
        {
            name: webpack.config.js,
            size: 1147,
            type: file
        }
    ],
    size: 1883,
    type: directory
}
"
`;

exports[`"Remove" commands remove webpack 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"build:es\\": \\"webpack\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\"
    }
}
"
`;

exports[`"Remove" commands remove webpack 3`] = `
"{
    name: tomo-test,
    children: [
        {
            name: package.json,
            size: 187,
            type: file
        }
    ],
    size: 187,
    type: directory
}
"
`;

exports[`"Remove" commands remove webpack 4`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {}
}
"
`;

exports[`Add Reason with Webpack 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:reason\\": \\"bsb -make-world -clean-world\\",
        \\"watch:reason\\": \\"npm run build:reason -- -w\\"
    }
}
"
`;

exports[`Add Reason with Webpack 2`] = `
"{
    \\"bs-dependencies\\": [
        \\"reason-react\\"
    ],
    \\"bsc-flags\\": [
        \\"-bs-super-errors\\"
    ],
    \\"namespace\\": true,
    \\"package-specs\\": [
        {
            \\"module\\": \\"es6\\",
            \\"in-source\\": true
        }
    ],
    \\"ppx-flags\\": [],
    \\"reason\\": {
        \\"react-jsx\\": 3
    },
    \\"refmt\\": 3,
    \\"sources\\": [
        {
            \\"dir\\": \\"src\\",
            \\"subdirs\\": true
        }
    ],
    \\"suffix\\": \\".bs.js\\",
    \\"name\\": \\"my-project\\"
}
"
`;

exports[`Add Reason with Webpack 3`] = `
"{
    name: tomo-test,
    children: [
        {
            name: bsconfig.json,
            size: 474,
            type: file
        },
        {
            name: package.json,
            size: 301,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: App.re,
                            size: 116,
                            type: file
                        },
                        {
                            name: Example.re,
                            size: 126,
                            type: file
                        }
                    ],
                    size: 242,
                    type: directory
                }
            ],
            size: 242,
            type: directory
        }
    ],
    size: 1017,
    type: directory
}
"
`;
